[tool.poetry]
name = "mytwitter"
version = "0.1.0"
description = ""
authors = ["Islam <islamkazproject@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^5.0.4"
mypy = "^0.971"
black = "^22.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
